# turboscan

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/cli/: app.rs  mod.rs  validato.rs
src/core/: scanner.rs
