[package]
name = "turboscan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.3", features = ["derive"] }
dns-lookup = "1.0.8"
indicatif = "0.17.3"
num_cpus = "1.15.0"
threadpool = "1.8.1"
url = "2.3.1"
