[package]
name = "turboscan"
version = "0.1.4"
edition = "2021"
authors = ["Vithal Reddy <4v.reddy@gmail.com>"]
description = "A fast and reliable Rust-based port scanner CLI."
documentation = "https://docs.rs/turboscan"
repository = "https://github.com/vithalreddy/turboscan"
homepage = "https://github.com/vithalreddy/turboscan"
license = "MIT"
keywords = ["cli", "port-scanner", "open-ports"]
categories = ["command-line-utilities"]

exclude = [
    "assets/*",
    ".github/*"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
dns-lookup = "2.0.2"
indicatif = "0.17.5"
num_cpus = "1.15.0"
threadpool = "1.8.1"
url = "2.4.0"
